--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.ts"
   },
   "dependencies": {
+    "@types/express": "^4.17.15",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
