--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "siiso-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon index.ts"
